--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-2xl">
         <h1 class="text-2xl font-bold mb-4 text-center">Language Testing Quiz</h1>
+	<div class="text-center mb-4">
+    <a href="part2.html" class="inline-block bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
+        Skip to Part 2 ➡️
+    </a>
+</div>
+
         <div id="quiz-container">
             <div id="question-number" class="text-lg font-semibold mb-2"></div>
             <div id="question-text" class="mb-4"></div>
@@ -73,12 +79,14 @@
 <button id="back-button" class="mt-2 bg-gray-500 text-white px-4 py-2 rounded hidden hover:bg-gray-600">Go Back</button>
 
 
-        </div>
         <div id="completion-message" class="hidden text-center">
-            <h2 class="text-xl font-bold mb-4">Quiz Completed!</h2>
-            <p>You have answered all questions. Thank you for participating!</p>
-        </div>
-    </div>
+    <h2 class="text-xl font-bold mb-4">Quiz Completed!</h2>
+    <p>You have answered all questions. Thank you for participating!</p>
+    <a href="part2.html" class="inline-block mt-4 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
+        Go to Part 2 ➡️
+    </a>
+</div>
+
 
     <script>
         const questions = [
